# protocol-core

./: .gitignore  CHANGELOG.md  Cargo.toml  HEADER-GPL3  Makefile  README.md  types.d.ts
.github/workflows/: ci.yml  release.yml
benches/: transaction_api_bench.rs
docs/: PROTOCOL_CORE_API.md  PROTOCOL_CORE_ARCHITECTURE.md
npm/: README.md  package.json.template
src/: lib.rs
src/application/: disclosure.rs  errors.rs  key_manager.rs  memo_utils.rs  mod.rs  note_manager.rs  params.rs
src/application/builders/: extrinsic.rs  mod.rs
src/application/builders/batch/: mod.rs  shield_batch.rs
src/application/builders/compliance/: approve_disclosure.rs  audit_policy.rs  batch_submit_disclosure.rs  disclosure_flow.rs  mod.rs  reject_disclosure.rs  request_disclosure.rs  submit_disclosure.rs
src/application/builders/core/: mod.rs  shield.rs  transfer.rs  unshield.rs
src/application/ports/: mod.rs  transaction_encoder.rs
src/application/validators/: compliance_validator.rs  mod.rs  transaction_validator.rs
src/domain/: entities.rs  mod.rs  ports.rs
src/domain/ports/: encoder.rs
src/domain/types/: crypto.rs  identifiers.rs  mod.rs  primitives.rs
src/infrastructure/: crypto.rs  mod.rs  subxt_client.rs
src/infrastructure/codec/: encoder.rs  mod.rs  types.rs
src/infrastructure/serde_adapters/: collections.rs  crypto.rs  mod.rs  primitives.rs
src/infrastructure/serializers/: mod.rs
src/infrastructure/serializers/adapters/: mod.rs  transaction_encoder.rs
src/infrastructure/serializers/core/: call_data_builder.rs  mod.rs  transaction_serializer.rs
src/infrastructure/serializers/extrinsic/: extrinsic_serializer.rs  mod.rs
src/presentation/: config.rs  crypto_api.rs  mod.rs  wasm_bindings.rs  zk_models.rs
src/presentation/api/: batch.rs  compliance.rs  core.rs  extrinsic.rs  mod.rs  signing.rs
